Wed Dec 31 05:46:36 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/barrier/server/Barrier_i.cpp:

          . Bug fix where broadcast () did not remove the clients from
            its collection. This mean the close () method was signaling
            non-existent clients.

Wed Dec 31 03:10:30 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/Node_Daemon/Node_Daemon.idl:
        * cuts/utils/Node_Daemon/Node_Daemon_Server.cpp:
        * cuts/utils/Node_Daemon/Node_Daemon_i.cpp:
        * cuts/utils/Node_Daemon/Node_File_Reader.h:
        * cuts/utils/Node_Daemon/Node_File_Reader.inl:
        * cuts/utils/Node_Daemon/Node_File_Reader.cpp:
        * cuts/utils/Node_Daemon/cutsnode_d.mpc:
        * etc/schemas/cutsnode.xsd:

          . Added support for redirecting stdour/stderr to files.

        * cuts/utils/Node_Daemon/Node_Daemon.mpc:

          Removed this file.

Tue Dec 30 20:42:02 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/emulab/is-master-node.sh:

          . Emulab script for determining if a node is a master. This
            is based on the presense of the /var/emulab/syncserver file.

Tue Dec 30 18:38:05 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/barrier/client/Barrier_Client.h:
        * cuts/utils/barrier/client/Barrier_Client.cpp:

          . Added a help screen for the barrier client.

Tue Dec 30 07:26:34 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MPC/config/cuts_barrier_skel.mpb:
        * MPC/config/cuts_barrier_stub.mpb:
        * cuts/utils/barrier:
        * cuts/utils/barrier/Barrier_skel_export.h:
        * cuts/utils/barrier/Barrier_stub_export.h:
        * cuts/utils/barrier/barrier.idl:
        * cuts/utils/barrier/barrier.mpc:
        * cuts/utils/barrier/client:
        * cuts/utils/barrier/client/BarrierCallback_i.h:
        * cuts/utils/barrier/client/BarrierCallback_i.inl: